# Agno-agent-financial

./: .env.example  .gitignore  .pre-commit-config.yaml  AGNO_INTEGRATION_README.md  BACKTESTING_README.md  CHANGELOG_v3.8.0.md  COMANDOS_FASE2.md  COMANDOS_FINALES.md  DEPLOY_TO_GITHUB.md  FASE1_IMPLEMENTATION.md  FASE1_IMPLEMENTATION_SUMMARY.md  FASE2_IMPLEMENTATION_SUMMARY.md  GRAFICOS_INTERACTIVOS.md  LICENSE  MANIFEST.in  MEJORAS_ALGORITMO.md  MIGRATION_GUIDE.md  MODULARIZATION_SUMMARY.md  MOTORES_COMPARISON.md  OPENROUTER_SETUP.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_SUMMARY.md  README.md  SECURITY.md  SECURITY_CHECKLIST.md  SISTEMA_COMPLETO.md  TRANSPARENT_CHARTS.md  VERSION_COMPARISON.md  VERSION_HISTORY.md  __init__.py  backtest_aapl_quick.json  backtest_hybrid_v3_5m_1d_4int_20251020_053114.json  backtest_hybrid_v3_5m_1d_4int_20251020_134905.json  backtest_results_v2_1_agno_15d_2h_20251018_224534.json  backtest_results_v2_1_agno_30d_2h_20251018_222445.json  backtest_results_v2_1_agno_3d_2h_20251018_215125.json  backtest_simulator.py  btc_30d_4h_deepseek.json  btc_30d_4h_deepseek_dashboard.html  (+33 more)
agents/: README.md  __init__.py  advanced_reporter.yaml  daily_reporter.yaml  example_usage.py  loader.py  market_researcher.yaml  portfolio_manager.yaml  risk_analysts.yaml  team_config.yaml  trading_strategists.yaml
config/: llm_config.py
core/: README.md  __init__.py  analysis.py  execution.py  html_reports.py  llm_analyzer.py  llm_insights.py  metrics.py  portfolio.py  reporting.py  validation.py  visualization.py  visualization_plotly.py
docs/: ADVANCED_TRADING_SYSTEM.md  AGENT_WORKFLOW_DIAGRAM.excalidraw  AGNO_README.md  COMPARISON_ORIGINAL_VS_MULTIAGENT.md  CRITICAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INDEX.md  LLM_PROVIDERS.md  MODEL_RECOMMENDATIONS.md  MULTI_AGENT_CONSENSUS_SYSTEM.md  NEW_FEATURES_SERPER_HISTORY.md  QUICKSTART_AGNO.md  ROADMAP.md  SISTEMA_FINAL.md  SPANISH_LANGUAGE_FIX.md  WORKFLOW_DIAGRAM.md
examples/: README.md  generate_report.py
history/: daily_summary.csv
scripts/: CRITICAL_FEATURES_README.md  advanced_reporting_workflow.py  advanced_trading_team.py  advanced_trading_team_v2.py  advanced_trading_team_v3.py  advanced_trading_team_v3_ultra.py  agno_trading_system.py  live_trading_example.py  quick_test.py  stop_loss_monitor.py  test_critical_validators.py  test_fase1.py  validators.py
tests/: test_9_agents.py  test_agno_integration.py  (+6 more)
(+3 files in other folders)
